[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Audio/BGM/02 - corrupted memory.wav" type="AudioStream" id=2]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Gameplay.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Spawner.gd" type="Script" id=5]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/Abaddon Light.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0.941176, 0.980392, 0.784314, 1 )
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.596078, 0.121569, 0.670588, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.941176, 0.254902, 0.505882, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[node name="Main" type="Node"]
script = ExtResource( 8 )

[node name="Gameplay" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Background" parent="Gameplay" instance=ExtResource( 1 )]
margin_right = 0.0

[node name="Spawner" type="Node2D" parent="Gameplay"]
position = Vector2( 128, 0 )
script = ExtResource( 5 )

[node name="SpawnTimer" type="Timer" parent="Gameplay/Spawner"]

[node name="UI" parent="." instance=ExtResource( 3 )]

[node name="MainMenu" type="CanvasLayer" parent="UI"]
script = ExtResource( 6 )

[node name="Title" type="Label" parent="UI/MainMenu"]
margin_left = 52.0
margin_top = 116.0
margin_right = 204.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( -288, -96 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.980392, 0.784314, 1 )
text = "NOVAE - 01"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="UI/MainMenu"]
margin_left = 98.0
margin_top = 176.0
margin_right = 218.0
margin_bottom = 208.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.941176, 0.980392, 0.784314, 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credit" type="Button" parent="UI/MainMenu"]
margin_left = 98.0
margin_top = 200.0
margin_right = 218.0
margin_bottom = 232.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.941176, 0.980392, 0.784314, 1 )
text = "Credit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[connection signal="timeout" from="Gameplay/Spawner/SpawnTimer" to="Gameplay/Spawner" method="_on_SpawnTimer_timeout"]
[connection signal="pressed" from="UI/MainMenu/Start" to="Gameplay" method="_on_Start_pressed"]
[connection signal="pressed" from="UI/MainMenu/Start" to="Gameplay/Spawner" method="_on_Start_pressed"]
[connection signal="pressed" from="UI/MainMenu/Start" to="UI/MainMenu" method="_on_Start_pressed"]
[connection signal="pressed" from="UI/MainMenu/Credit" to="." method="_on_Credit_pressed"]
[connection signal="pressed" from="UI/MainMenu/Credit" to="UI/MainMenu" method="_on_Credit_pressed"]
